force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Data_Language__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Data_Language__c</fullName>
    <label>Data Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>