force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Document_ID__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_ID__c</fullName>
    <label>Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>