force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_Link__c</fullName>
    <label>Document Link</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>