force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Edit_Link__c</fullName>
    <formula>IF( SDOC__Allow_Edit__c,
HYPERLINK(LEFT(
$Api.Partner_Server_URL_260,
FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)
-1
) &amp; &apos;/apex/SDOC__SDRedirect?redirectPage=SDOC__SDEdit&amp;sdid=&apos;+Id,IMAGE(&quot;/img/icon/custom51_100/pencil16.png&quot;,&quot;Edit&quot;)
,&quot;_blank&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>