force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Email_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Email_Link__c</fullName>
    <formula>If( AND (NOT(isblank(SDOC__GD_Link__c)),ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Google Doc&apos;) )
,
    HYPERLINK( SDOC__GD_Link__c,IMAGE(&quot;/img/google/gmail_M_icon.gif&quot;,&quot;View&quot;),&quot;_blank&quot;)
,
     IF(       AND(     SDOC__SDTemplate__r.SDOC__Email_Lock_SendTo__c  , 
                          isblank(SDOC__SDTemplate__r.SDOC__Email_SendTo__c) 
                     ) , IMAGE(&quot;/img/func_icons/util/lock12.gif&quot;,&quot;Restricted&quot;),

        IF  (isblank(SDOC__ObjectType__c),&apos;&apos;,
         /*LINK*/
         HYPERLINK(
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)-1)&amp;
                              IF(AND (NOT(isblank(SDOC__GD_Link__c)),ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Attachment&apos;) ) ,
                               &quot;/apex/SDOC__SDRedirect?redirectPage=SDOC__SDEmail&amp;GenAtEmail=true&amp;SDId=&quot; &amp; Id,
                                &quot;/apex/SDOC__SDRedirect?redirectPage=SDOC__SDEmail&amp;GenAtEmail=true&amp;SDId=&quot; &amp; Id
                                 )
                            ,IMAGE( &apos;/img/func_icons/util/mailCloseEnv16.gif&apos;,&apos;Email&apos;)
                            , &quot;_self&quot;
                            )/*HYPERLINK*/
        )
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>