force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__Envelope__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Envelope</label>
    <referenceTo>SDOC__Envelope__c</referenceTo>
    <relationshipLabel>S-Docs</relationshipLabel>
    <relationshipName>SDocs</relationshipName>
    <type>Lookup</type>
</CustomField>