force-app/main/default/objects/SDOC__SDoc__c/fields/SDOC__View_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__View_Link__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(SDOC__GD_Link__c)),
    NOT(ISBLANK(SDOC__GD_Status_Text__c)),
    CONTAINS(
      &apos;Linked to Google Doc,Linked to Box,Linked to S3&apos;,
      SDOC__GD_Status_Text__c
    )
  ),

  HYPERLINK(
    SDOC__GD_Link__c,
    IMAGE(&quot;/sfc/images/docicons/doctype_gdoc_16.png&quot;,&quot;View&quot;),
    &quot;_blank&quot;
  ),

  HYPERLINK(
    LEFT(
      $Api.Partner_Server_URL_260,
      FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260)
      -1
    )
    &amp;
    IF(
      AND(
        NOT(ISBLANK(SDOC__GD_Link__c)),
        NOT(CONTAINS(SDOC__GD_Link__c, &apos;/apex/SDT&apos;))
      ),
      SDOC__GD_Link__c,
      &quot;/apex/SDOC__SDRedirect?redirectPage=SDOC__SDTemplate&quot;
      &amp;
      SDOC__Document_Format__c
      &amp;
      &apos;&amp;Id=&apos;
      &amp;
      Id
    ),
    IMAGE(
      &quot;/sfc/images/docicons/doctype_&quot; +
      CASE(
        SDOC__Document_Format__c,
        &quot;XLS&quot;, &quot;excel&quot;,
        &quot;XLSX&quot;, &quot;excel&quot;,
        &quot;DOC&quot;, &quot;word&quot;,
        &quot;DOCX&quot;, &quot;word&quot;,
        &quot;HTML&quot;, &quot;html&quot;,
        &quot;PPT&quot;, &quot;ppt&quot;,
        &quot;PPTX&quot;, &quot;ppt&quot;,
        &quot;XML&quot;, &quot;xml&quot;,
        &quot;CSV&quot;, &quot;csv&quot;,
        &quot;pdf&quot;
      ) + &quot;_16.png&quot;,
      &quot;&quot;
    ),
    &quot;_blank&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>